@@ -1,3 +1,8 @@
+2002-12-11  Ross Burton  <ross@burtonini.com>
+
+	* minefield.c: Small changes to try and draw the labels at a
+	sensible size. Closes #100796.
+
 2002-11-29  Ross Burton  <ross@burtonini.com>
 
 	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
